--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+   "deploy": "main -d build"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
