--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "courseselling",
-  "homepage": "https://simmyarakkal.github.io/course",
+  "name": "courseselling",  
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,9 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-   "deploy": "main -d build"
-  },
+    "predeploy": "npm run build"
+    },
   "dependencies": {
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
